# MetalFlow

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: Doxyfile  README.md  architecture.md  laplace_solver.md  mainpage.md
examples/: demo.cpp  laplace_solver.cpp
include/metalflow/: MetalCompute.hpp  metalflow.hpp
shaders/: cfd_fea.metal  laplace.metal
src/metalflow/: MetalCompute.mm
